# anthill-game-engine

./: .gitignore  Cargo.toml  README.md
anthill-di-lib/: Cargo.toml
anthill-di-lib/src/: container.rs  injection.rs  injector.rs  lib.rs
anthill-di-lib/src/builders/: builder.rs  interface_builder.rs  mod.rs  type_builder.rs
anthill-game-engine/: Cargo.toml
anthill-game-engine/src/: lib.rs  main.rs
anthill-game-engine/src/config/: core_config.rs  logger_config.rs  mod.rs
anthill-game-engine/src/core/: engine_core.rs  mod.rs  state.rs
anthill-game-engine/src/gui/: mod.rs
anthill-game-engine/src/gui/controllers/: new_project.rs
anthill-game-engine/src/gui/layouts/: new_project.rs
anthill-game-engine/src/gui/models/: new_project.rs
anthill-game-engine/src/gui/screen/: screen.rs
anthill-game-engine/src/gui/types/: render_api.rs
anthill-game-engine/src/gui/views/: new_project.rs
anthill-game-engine/src/gui/window/: mod.rs  window.rs  window_builder.rs  window_system.rs
anthill-game-engine/src/gui/window/gapi/: opengl.rs
anthill-game-engine/src/system_dependent/: mod.rs
anthill-game-engine/src/system_dependent/window/: mod.rs  window.rs
anthill-game-engine/src/system_dependent/window/opengl/: mod.rs  opengl.rs
anthill-game-engine/src/utils/: containers_builder.rs  logger_builder.rs  mod.rs  time.rs
anthill-game-engine/src/window_system/: events.rs  mod.rs  window.rs  window_system.rs
anthill-macros-lib/: Cargo.toml
anthill-macros-lib/src/: lib.rs
anthill-window-lib/: Cargo.toml  build.rs
anthill-window-lib/src/: lib.rs
anthill-window-lib/src/config/: mod.rs  window_system_config.rs
anthill-window-lib/src/gui/: draweable.rs  layout_builder.rs  mod.rs  mvc.rs  (+1 more)
configs/: core-config.json  logger-config.json
(+10 files in other folders)
