[package]
name = "anthill-macros-lib"
version = "0.1.0"
authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"